--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -1,35 +1,36 @@
-{% extends 'base/base.html' %}
-
-<!-- title -->
-{% block title %} Home {% endblock %}
-
-<!-- content -->
-{% block content %}
+{% extends 'base/base.html' %} {% block content %}
 
 <div class="col-md-6 offset-md-3">
-  <h1 class="mt-3">Register</h1>
+  <h1>Register</h1>
   <br />
-  <form action="{% url 'home' %}" method="POST">
+
+  <form method="POST" action="">
     {% csrf_token %}
-    <div class="mb-3">
-      <input
-        type="text"
-        class="form-control"
-        name="username"
-        placeholder="Username"
-        required
-      />
+
+    <!-- if error -->
+    {% if form.errors %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      Your Form Has Errors
+      <!--  -->
+      {% for field in form %}
+      <!--  -->
+      {% if field.errors %} {{ field.errors }} {% endif %}
+      <!--  -->
+      {% endfor %}
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="alert"
+        aria-label="Close"
+      ></button>
     </div>
-    <div class="mb-3">
-      <input
-        type="password"
-        class="form-control"
-        name="password"
-        placeholder="Password"
-        required
-      />
-    </div>
-    <button type="submit" class="btn btn-secondary">Login</button>
+    {% endif %}
+
+    <!-- render -->
+    {{ form.as_p }}
+
+    <br />
+    <button type="submit" class="btn btn-secondary">Register</button>
   </form>
 </div>
 
