--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,15 +1,44 @@
 {% extends 'base/base.html' %}
 
-<!-- title -->
 {% block title %} Home {% endblock %}
 
-<!-- content -->
 {% block content %}
 
-<div class="col-md-6 offset-md-3">
-  {% if user.is_authenticated %}
+{% if user.is_authenticated %}
+  <h1 class="my-3">Records...</h1>
 
-  <h1>Hello World</h1>
+  <table class="table table-striped table-hover table-bordered">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">first name</th>
+        <th scope="col">last name</th>
+        <th scope="col">email</th>
+        <th scope="col">phone</th>
+        <th scope="col">address</th>
+        <th scope="col">city</th>
+        <th scope="col">zipcode</th>
+        <th scope="col">created at</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% if records %}
+        {% for record in records %}
+          <tr>
+            <th scope="row">1</th>
+            <td>{{ record.first_name }}</td>
+            <td>{{ record.last_name }}</td>
+            <td>{{ record.email }}</td>
+            <td>{{ record.phone }}</td>
+            <td>{{ record.address }}</td>
+            <td>{{ record.city }}</td>
+            <td>{{ record.zipcode }}</td>
+            <td>{{ record.created_at }}</td>
+          </tr>
+        {% endfor %}
+      {% endif %}
+    </tbody>
+  </table>
 
   {% else %}
 
@@ -37,6 +66,6 @@
     </div>
     <button type="submit" class="btn btn-secondary">Login</button>
   </form>
-</div>
+{% endif %}
 
-{% endif %} {% endblock %}
+{% endblock %}
