--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -1,4 +1,6 @@
-{% extends 'base/base.html' %} {% block content %}
+{% extends 'base/base.html' %}
+
+{% block content %}
 
 <div class="col-md-6 offset-md-3">
   <h1>Register</h1>
@@ -11,11 +13,10 @@
     {% if form.errors %}
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
       Your Form Has Errors
-      <!--  -->
       {% for field in form %}
-      <!--  -->
-      {% if field.errors %} {{ field.errors }} {% endif %}
-      <!--  -->
+        {% if field.errors %}
+          {{ field.errors }}
+        {% endif %}
       {% endfor %}
       <button
         type="button"
