--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -1,5 +1,7 @@
 {% extends 'base/base.html' %}
 
+{% block title %} REgister {% endblock %}
+
 {% block content %}
 
 <div class="col-md-6 offset-md-3">
