--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 {% if user.is_authenticated %}
+
   <h1 class="my-3">Records...</h1>
 
   <table class="table table-striped table-hover table-bordered">
@@ -42,6 +43,7 @@
 
   {% else %}
 
+<div class="col-md-6 offset-md-3">
   <h1 class="mt-3">Login</h1>
   <br />
   <form action="{% url 'home' %}" method="POST">
@@ -66,6 +68,8 @@
     </div>
     <button type="submit" class="btn btn-secondary">Login</button>
   </form>
+</div>
+
 {% endif %}
 
 {% endblock %}
