--- a/website/templates/base/navbar.html
+++ b/website/templates/base/navbar.html
@@ -16,7 +16,7 @@
       <ul class="navbar-nav">
         {% if user.is_authenticated %}
         <li class="nav-item">
-          <a class="nav-link" href="">Add Record</a>
+          <a class="nav-link" href="{% url 'add_record' %}">Add Record</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
