--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -12,14 +12,16 @@
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">first name</th>
-        <th scope="col">last name</th>
-        <th scope="col">email</th>
-        <th scope="col">phone</th>
-        <th scope="col">address</th>
-        <th scope="col">city</th>
-        <th scope="col">zipcode</th>
-        <th scope="col">created at</th>
+        <th scope="col">First Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Phone</th>
+        <th scope="col">Address</th>
+        <th scope="col">City</th>
+        <th scope="col">State</th>
+        <th scope="col">Zipcode</th>
+        <th scope="col">Created At</th>
+        <th scope="col">ID</th>
       </tr>
     </thead>
     <tbody>
@@ -33,8 +35,10 @@
             <td>{{ record.phone }}</td>
             <td>{{ record.address }}</td>
             <td>{{ record.city }}</td>
+            <td>{{ record.state }}</td>
             <td>{{ record.zipcode }}</td>
             <td>{{ record.created_at }}</td>
+            <td><a href="{% url 'record' record.id %}">{{ record.id }}</a></td>
           </tr>
         {% endfor %}
       {% endif %}
