--- a/website/templates/record.html
+++ b/website/templates/record.html
@@ -23,6 +23,7 @@
   </div>
   <br>
   <a href="{% url 'home' %}" class="btn btn-secondary">Back to Home</a>
-  <a href="{% url 'delete_customer' customer_record.id %}" class="btn btn-danger">Delete</a>
+  <a href="{% url 'delete_record' customer_record.id %}" class="btn btn-danger">Delete</a>
+  <a href="{% url 'update_record' customer_record.id %}" class="btn btn-warning">Update</a>
 
 {% endblock %}
